<resources>
    <string name="app_name">Dicoding Story</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicodingin aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="copyright">© 2021 Dicoding</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_add_story">Tambah Story</string>
    <string name="title_profile">Profil</string>
    <string name="add_story">tambah cerita</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galery</string>
    <string name="share_location">Bagikan Lokasi</string>
    <string name="story_desc_hint">Masukan Deskripsi</string>
    <string name="upload">Unggah</string>
    <string name="title">Judul</string>
    <string name="description">Deskripsi</string>
</resources>