<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardBackgroundColor="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_200">

        <ImageView
            android:id="@+id/iv_story"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@android:color/white"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_launcher_background"
            android:transitionName="photo"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            card_view:layout_constraintStart_toStartOf="@+id/iv_story"
            card_view:layout_constraintTop_toBottomOf="@+id/iv_story"
            tools:text="@string/title"
            android:transitionName="username"/>

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            card_view:layout_constraintStart_toStartOf="@+id/iv_story"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_username"
            tools:text="@string/description"
            android:transitionName="description"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginVertical="8dp"
            android:background="@color/blue_200"
            app:layout_constraintTop_toBottomOf="@id/tv_desc" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>